# aura-gui

./: .gitignore  README.md
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  lib.rs  main.rs  node.rs  wallet.rs
