[package]
name = "aura-gui"
version = "0.1.7"
edition = "2021"
description = "AuraCore Desktop Wallet + Node Manager"
authors = ["AuraCore Development Team"]

[package.metadata.bundle]
identifier = "ai.2mars.aura-gui"
icon = []

# See Tauri docs: https://tauri.app/v2/guides/building/
[lib]
name = "aura_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aura-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ed25519 signing (same versions as AuraCore)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# AES-256-GCM keystore encryption (same as AuraCore keystore.rs)
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"

# HTTP client for node RPC calls
reqwest = { version = "0.11", features = ["json"] }

# Tokio async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"

# Process management
# (std::process::Command used for node spawn — no extra dep needed)

# Release profile is defined at the workspace root (../Cargo.toml)
